--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,9 @@
 ---
 output: github_document
+always_allow_html: true
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -15,7 +19,11 @@ knitr::opts_chunk$set(
 
 # datamanager
 
+<!-- badges: start -->
+
 [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.xxxxxxx.svg)](https://doi.org/10.5281/zenodo.xxxxxxx) [![codecov](https://codecov.io/gh/annyg/datamanager/branch/main/graph/badge.svg)](https://codecov.io/gh/annyg/datamanager) ![License](https://img.shields.io/badge/license-MIT-blue.svg)
+
+<!-- badges: end -->
 
 `datamanager` is an R package designed for the efficient management and scoring of research data, particularly focusing on questionnaire and survey data. It provides a suite of functions to handle common tasks in data preparation and scoring, including support for instruments such as RAND-12 and EMQ.
 
@@ -27,43 +35,43 @@ knitr::opts_chunk$set(
 
 ## Installation
 
-You can install the latest version of `datamanager` directly from GitHub using the `devtools` package:
+You can install the latest version of `datamanager` directly from GitHub using:
 
-``` r
-# Install devtools if you haven't already
-install.packages("devtools")
-
-# Install datamanager from GitHub
-devtools::install_github("annyg/datamanager")
+```{r}
+if (!require("pak")) install.packages("pak")
+pak::pak("annyg/datamanager")
+library(datamanager)
 ```
 
 ## Usage
 
-Below are some examples demonstrating how to use the main functions in `datamanager`.
+The `datamanager` package is designed to handle data frames and primarily builds on tidyverse syntax. Below are examples demonstrating how to use the main functions in `datamanager`.
 
 ### Data Management
 
-``` r
+```{r echo=FALSE, eval=TRUE}
 library(datamanager)
+library(dplyr)
 
-# Example function call for cleaning data
-cleaned_data <- clean_survey_data(raw_data)
+# Example function call for cleaning common typos often found in email adresses
+# cleaned_df <- df %>%
+#   mutate(clean_emails = datamanager::prep_email(messy_emails))
 ```
 
 ### Scoring Instruments
 
 #### RAND-12 Scoring
 
-``` r
+```{r}
 # Example for scoring RAND-12
-rand12_scores <- score_rand12(cleaned_data)
+# rand12_scores <- score_rand12(cleaned_data)
 ```
 
 #### EMQ Scoring
 
-``` r
+```{r}
 # Example for scoring EMQ
-emq_scores <- score_emq(cleaned_data)
+# emq_scores <- score_emq(cleaned_data)
 ```
 
 For detailed documentation on these functions and more, please refer to the package help files or vignette.
@@ -76,7 +84,7 @@ If you use `datamanager` in your research, please cite it as follows:
 
 Example BibTeX entry:
 
-``` bibtex
+```{bibtex}
 @software{Anders B. Nygaard_2023_XXXXXXX,
   author       = {Anders B. Nygaard},
   title        = {datamanager: Tools for Questionnaire and Survey Data Management},
@@ -89,6 +97,10 @@ Example BibTeX entry:
   url          = {https://github.com/annyg/datamanager}
 }
 ```
+
+## Lifecycle
+
+This package is currently an experimental, as defined by the [RECON software lifecycle](https://www.reconverse.org/lifecycle.html). This means that it is functional, but interfaces and functionalities may change over time, testing and documentation may be lacking.
 
 ## Contributing
 
