--- a/README.Rmd
+++ b/README.Rmd
@@ -21,21 +21,31 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 
-[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.xxxxxxx.svg)](https://doi.org/10.5281/zenodo.xxxxxxx) [![codecov](https://codecov.io/gh/annyg/datamanager/branch/main/graph/badge.svg)](https://codecov.io/gh/annyg/datamanager) ![License](https://img.shields.io/badge/license-MIT-blue.svg)
+[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.xxxxxxx.svg)](https://doi.org/10.5281/zenodo.xxxxxxx)
+[![codecov](https://codecov.io/gh/annyg/datamanager/branch/main/graph/badge.svg)](https://codecov.io/gh/annyg/datamanager)
+![License:GPL-3.0](https://img.shields.io/badge/license-GPL--3.0-green.svg)
 
 <!-- badges: end -->
 
-`datamanager` is an R package designed for the efficient management and scoring of research data, particularly focusing on questionnaire and survey data. It provides a suite of functions to handle common tasks in data preparation and scoring, including support for instruments such as RAND-12 and EMQ.
+`datamanager` is an R package designed for the efficient management and
+scoring of research data, particularly focusing on questionnaire and
+survey data. It provides a suite of functions to handle common tasks in
+data preparation and scoring, including support for instruments such as
+RAND-12 and EMQ.
 
 ## Features
 
--   **Data Management**: Effortlessly clean and organize questionnaire data.
--   **Scoring Functions**: Compute scores for recognized instruments including RAND-12 and EMQ.
--   **Efficient Workflow**: Streamline your data processing tasks in research settings.
+-   **Data Management**: Effortlessly clean and organize questionnaire
+    data.
+-   **Scoring Functions**: Compute scores for recognized instruments
+    including RAND-12 and EMQ.
+-   **Efficient Workflow**: Streamline your data processing tasks in
+    research settings.
 
 ## Installation
 
-You can install the latest version of `datamanager` directly from GitHub using:
+You can install the latest version of `datamanager` directly from GitHub
+using:
 
 ```{r, message=FALSE}
 if (!require("pak")) install.packages("pak")
@@ -45,19 +55,18 @@ library(datamanager)
 
 ## Usage
 
-The `datamanager` package is designed to handle data frames and primarily builds on tidyverse syntax. Below are examples demonstrating how to use the main functions in `datamanager`.
+The `datamanager` package is designed to handle data frames and
+primarily builds on tidyverse syntax. Below are examples demonstrating
+how to use the main functions in `datamanager`.
 
 ### Data Management
 
 ```{r message=FALSE}
-library(datamanager)
-library(dplyr)
+#library(datamanager)
 
 # Example function call for cleaning common typos often found in email adresses
-
 # cleaned_df <- df %>%
 #   mutate(clean_emails = datamanager::prep_email(messy_emails))
-
 ```
 
 ### Scoring Instruments
@@ -76,7 +85,8 @@ library(dplyr)
 # emq_scores <- score_emq(cleaned_data)
 ```
 
-For detailed documentation on these functions and more, please refer to the package help files or vignette.
+For detailed documentation on these functions and more, please refer to
+the package help files or vignette.
 
 ## Citation
 
@@ -102,16 +112,23 @@ Example BibTeX entry:
 
 ## Lifecycle
 
-This package is currently an experimental, as defined by the [RECON software lifecycle](https://www.reconverse.org/lifecycle.html). This means that it is functional, but interfaces and functionalities may change over time, testing and documentation may be lacking.
+This package is currently an experimental, as defined by the [RECON
+software lifecycle](https://www.reconverse.org/lifecycle.html). This
+means that it is functional, but interfaces and functionalities may
+change over time, testing and documentation may be lacking.
 
 ## Contributing
 
-We welcome contributions! If you’d like to contribute to `datamanager`, please fork the repository, create a branch, and submit a pull request.
+We welcome contributions! If you’d like to contribute to `datamanager`,
+please fork the repository, create a branch, and submit a pull request.
 
 ## License
 
-`datamanager` is licensed under the MIT License. See the `LICENSE` file for more information. #FIXME
+`datamanager` is licensed under the GNU General Public License v3.0. See the `LICENSE` file for more information.
+
 
 ------------------------------------------------------------------------
 
-We hope you find `datamanager` useful in your research projects. For any questions, issues, or suggestions, please open an issue on GitHub or contact us.
+We hope you find `datamanager` useful in your research projects. For any
+questions, issues, or suggestions, please open an issue on GitHub or
+contact us.
